--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,6 +1,6 @@
 {
-    "SEO_TITLE":"",
-    "SEO_DESCRIPTION":"",
+    "SEO_TITLE":"Rey Halsall | @reduhq | Portafolio",
+    "SEO_DESCRIPTION":"Hola, Soy Rey Halsall. Desarrollador de software con 5 años de experiencia en aplicaciones web con React y APIs con FastAPI y Express. Enfocado en soluciones que generan impacto.",
     "HEADER_BTN_LANGUAGE_TEXT":"Idioma",
     "HEADER_BTN_LANGUAGE_FLAG":"SpainFlag",
     "HEADER_BTN_LANGUAGE_URL":"/portfolio/en",
