--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,6 @@
 {
-    "SEO_TITLE":"",
-    "SEO_DESCRIPTION":"",
+    "SEO_TITLE":"Rey Halsall | @reduhq | Portfolio",
+    "SEO_DESCRIPTION":"Hello, I'M Rey Halsall. Software developer with 5 years of experience in web applications with React and APIs with FastAPI and Express. Focused on solutions that generate impact.",
     "HEADER_BTN_LANGUAGE_TEXT":"Language",
     "HEADER_BTN_LANGUAGE_FLAG":"UKFlag",
     "HEADER_BTN_LANGUAGE_URL":"/portfolio",
