--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,7 +3,7 @@
     "SEO_DESCRIPTION":"Hello, I'M Rey Halsall. Software developer with 5 years of experience in web applications with React and APIs with FastAPI and Express. Focused on solutions that generate impact.",
     "HEADER_BTN_LANGUAGE_TEXT":"Language",
     "HEADER_BTN_LANGUAGE_FLAG":"UKFlag",
-    "HEADER_BTN_LANGUAGE_URL":"/portfolio",
+    "HEADER_BTN_LANGUAGE_URL":"/",
     "PRESENTATION_TITLE":"Hello, I'M",
     "PRESENTATION_DESCRIPTION":"Software developer with 5 years of experience in web applications with <span style='color:#14d4c9; font-weight:bold;'>React</span> and APIs with <span style='color:#14d4c9; font-weight:bold;'>FastAPI</span> and <span style='color:#14d4c9; font-weight:bold;'>Express</span>. Focused on solutions that generate impact.",
     "PRESENTATION_BTN_CV":"Download CV",
